--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     
-	<div class="navbar navbar-inverse navbar-fixed-top">
+	<nav class="navbar navbar-inverse navbar-fixed-top">
 	    <div class="container">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -19,6 +19,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>					
 				</button>
+            </div>				
 				<div class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
 						<li><a href="#golovna">ГОЛОВНА</a>
@@ -31,8 +32,7 @@
 					</ul>
 				</div>
 			</div>
-		</div>
-	</div>
+	</nav>
    <div class="container">
        <div id="golovna">
         <div class="container">
