Added border in table span

--- a/index.html
+++ b/index.html
@@ -352,6 +352,7 @@
                     <a href=""><img src="img/glyphicons-social-31-facebook.png" alt=""><span class="social social-pinterest"></span></a>
                     <a href=""><img src="img/glyphicons-social-33-instagram.png" alt=""></span></a>
                     <a href=""><img src="img/glyphicons-social-67-vk.png" alt=""></span></a>
+                    <h4>info@alivecamp.com.ua</h4>
                 </div>                
             </div>
         </div>
