--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link href="css/bootstrap.css" rel="stylesheet">
 	<link href="css/main.css" rel="stylesheet">
     <link href="css/slider.css" rel="stylesheet">
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 </head>
 <body>
     
@@ -38,16 +39,16 @@
         <div class="container">
             <div class="row centered">
                 <div class="col-lg-8 col-lg-offset-2 text-block1_1">
-                    <img src="img/logo.png" alt="Logo" class="" height="300">
-                    <h2>2017</h2>   
-                    <br/><h1>ВІДЧУЙ СЕБЕ ЖИВИМ</h1><br/><br/>
+                    <img src="img/logo_yeer_sm.png" alt="Logo" class="" height="450"><br/>
+                    <!-- <h2>2017</h2>   
+                    <br/><h1>ВІДЧУЙ СЕБЕ ЖИВИМ</h1><br/><br/> -->
                 </div>
             </div>
-            <div class="row centered">
-                <div class="col-lg-2"></div>               
-                <div class="col-lg-4">
+            <div class="row centered button-block">
+                <div class="col-lg-3"></div>               
+                <div class="col-lg-3">
                     <button type="button" class="btn btn-default btn-lg button-one" aria-label="Left Align">
-                        <span class="glyphicon glyphicon-play-circle but-icon" aria-hidden="true"></span><strong>ПРОМО</strong></button>
+                        <span class="glyphicon glyphicon-play-circle but-icon" aria-hidden="true"></span>ПРОМО</button>
                 </div>
                 <div class="col-lg-3"><button type="button" class="btn btn-default btn-lg button-two">ЗАРЕЄСТРУВАТИСЯ</button></div>   
                 <div class="col-lg-3">           
@@ -59,17 +60,18 @@
         </div>
     </div>
     <div id="pro_tabir">
-        <div class="container-fluid">
+        <div class="container">
             <div class="row centered">
-                <div class="col-lg-3 text-block2_1" >
+                <div class="col-lg-3 col-lg-offset-1 text-block2_1" >
                     <div class="text-innerblock2_1">
                         <h1>ДЛЯ КОГО?</h1>
                         <h4>Для молоді, яка<br/>відчуває себе<br/>живою, активною<br/>та драйвовою!</h4>
                     </div>   
                 </div>
-                <div class="col-lg-6 text-block2_2">
-                    <img src="img/logo.png" alt="Logo" class="" height="200">
-                    <h3>2017</h3>   
+                <div class="col-lg-4 text-block2_2">
+                    <img src="img/logo_yeer.png" alt="Logo" class="" height="130">
+                    <h3>Місце проведення<br/><strong>ШАЦЬКІ ОЗЕРА</strong></h3>
+                    <h3></h3>   
                 </div>
                 <div class="col-lg-3 text-block2_3">
                     <div class="">
@@ -159,7 +161,7 @@
                 </div>  
             </div>
         </div>
-        <div class="container">
+        <div class="container centered">
             <div class="row centered col-lg-offset-1 block3_1">
                 <div class="col-lg-3">
                     <p>1. Душі<br/>2. Туалети<br/>3. Умивальники<br/>4. Столи</p>
@@ -349,10 +351,13 @@
                 <div class="col-lg-8"></div>
                 <div class="col-lg-4">
                     <h2>097 220 78 30<br/>099 125 05 24<br/>063 913 47 23<br></h2>
-                    <a href=""><img src="img/glyphicons-social-31-facebook.png" alt=""><span class="social social-pinterest"></span></a>
+                    <a href=""><i class="fa fa-vk" aria-hidden="true"></i></a>
+                    <a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                    <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
+<!--                     <a href=""><img src="img/glyphicons-social-31-facebook.png" alt=""><span class="social social-pinterest"></span></a>
                     <a href=""><img src="img/glyphicons-social-33-instagram.png" alt=""></span></a>
                     <a href=""><img src="img/glyphicons-social-67-vk.png" alt=""></span></a>
-                    <h4>info@alivecamp.com.ua</h4>
+ -->                    <h4>info@alivecamp.com.ua</h4>
                 </div>                
             </div>
         </div>
