--- a/index.html
+++ b/index.html
@@ -341,24 +341,25 @@
     <div id="kontakty">
         <div class="container">
             <div class="row centered">
-                <div class="col-lg-2"></div>
-                <div class="col-lg-10">
-                    <h1>КОНТАКТИ</h1>
-                    <h3>Організатором AliveCamp є спільнота "Благословення"<br/>Української Греко-Католицької Церкви, яка займається<br/>просвітницькою, духовною та соціальною працею з<br/> молоддю і дорослими у м.Львові та за його<br/>межами. Виручені кошти з AliveCamp<br/>будуть спрямовані на підтримку та<br/> реалізацію цієї діяльності.</h3>
+                <div class="col-lg-12">
+                    <h1>КОНТАКТИ</h1><br/>
+                    <h4>Організатором AliveCamp є спільнота "Благословення" Української Греко-Католицької Церкви, яка займається<br/>просвітницькою, духовною та соціальною діяльністю з молоддю і дорослими у м.Львові та частково у інших<br/>містах України. Виручені кошти з AliveCamp будуть спрямовані на підтримку та реалізацію цієї діяльності.</h4>
                 </div>
             </div>
-            <div class="row centered">
-                <div class="col-lg-8"></div>
-                <div class="col-lg-4">
-                    <h2>097 220 78 30<br/>099 125 05 24<br/>063 913 47 23<br></h2>
+            <div class="row centered text-row9_1">
+                <div class="col-lg-4 col-lg-offset-2 text-block9_1">
+                    <h3>Київстар: 097 220 78 30<br/>Vodafone: 099 125 05 24<br/>lifecell: 063 913 47 23<br></h3>
+                </div>
+                <div class="col-lg-4 text-block9_2">
                     <a href=""><i class="fa fa-vk" aria-hidden="true"></i></a>
                     <a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>
                     <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
-<!--                     <a href=""><img src="img/glyphicons-social-31-facebook.png" alt=""><span class="social social-pinterest"></span></a>
-                    <a href=""><img src="img/glyphicons-social-33-instagram.png" alt=""></span></a>
-                    <a href=""><img src="img/glyphicons-social-67-vk.png" alt=""></span></a>
- -->                    <h4>info@alivecamp.com.ua</h4>
-                </div>                
+                </div>
+            </div>    
+            <div class="row centered text-row9_2">
+                <div class="col-lg-12">
+                    <h3>info@alivecamp.com.ua</h3>
+                </div>
             </div>
         </div>
     </div>
