--- a/index.html
+++ b/index.html
@@ -331,16 +331,14 @@
                         <div class="col-xs-12" id="slider">
                             <!-- Top part of the slider -->
                             <div class="row">
-<<<<<<< HEAD
                                 <div class="col-sm-6 col-sm-offset-3 " id="carousel-bounding-box">
-=======
                                 <div class="col-sm-2">
                                     <!-- <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
                                         <span class="glyphicon glyphicon-chevron-left"></span>
                                     </a> -->
                                 </div>
                                 <div class="col-sm-8 " id="carousel-bounding-box">
->>>>>>> master
+                                <div class="col-sm-6 col-sm-offset-3 " id="carousel-bounding-box">
                                     <div class="carousel slide" id="myCarousel">
                                         <!-- Carousel items -->
                                         <div class="carousel-inner">
@@ -366,15 +364,12 @@
                                             <span class="glyphicon glyphicon-chevron-left"></span>
                                         </a>
                                         <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-<<<<<<< HEAD
                                             <span><img src="img/strilka_white.png" alt=""></span>
                                             <!-- <span><i class="fa fa-angle-right" aria-hidden="true"></i></span> -->
                                             <!-- <span class="glyphicon glyphicon-chevron-right"></span>  -->                                
                                         </a>                                
-=======
                                             <span class="glyphicon glyphicon-chevron-right"></span>
                                         </a>
->>>>>>> master
                                         </div>
                                 </div>
 
@@ -462,7 +457,6 @@
                     <h4>Організатором AliveCamp є спільнота "Благословення" Української Греко-Католицької Церкви, яка займається<br/>просвітницькою, духовною та соціальною діяльністю з молоддю і дорослими у м.Львові та частково у інших<br/>містах України. Виручені кошти з AliveCamp будуть спрямовані на підтримку та реалізацію цієї діяльності.</h4>
                 </div>
             </div>
-<<<<<<< HEAD
             <div class="row centered text-row9_1">
                 <div class="col-lg-4 col-lg-offset-2 text-block9_1">
                     <h3>Київстар: 097 220 78 30<br/>Vodafone: 099 125 05 24<br/>lifecell: 063 913 47 23<br></h3>
@@ -476,7 +470,6 @@
             <div class="row centered text-row9_2">
                 <div class="col-lg-12">
                     <h3>info@alivecamp.com.ua</h3>
-=======
             <div class="row centered">
                 <div class="col-lg-8"></div>
                 <div class="col-lg-4">
@@ -485,7 +478,6 @@
                     <a href=""><img src="img/glyphicons-social-33-instagram.png" alt=""></span></a>
                     <a href=""><img src="img/glyphicons-social-67-vk.png" alt=""></span></a>
                     <h4>info@alivecamp.com.ua</h4>
->>>>>>> master
                 </div>
             </div>
         </div>
