Change color slider_prop

--- a/index.html
+++ b/index.html
@@ -226,38 +226,35 @@
                         <div class="col-xs-12" id="slider">
                             <!-- Top part of the slider -->
                             <div class="row">
-                                <div class="col-sm-2">
-                                    <!-- <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-                                        <span class="glyphicon glyphicon-chevron-left"></span>                                       
-                                    </a> -->
-                                </div>
-                                <div class="col-sm-8 " id="carousel-bounding-box">
+                                <div class="col-sm-6 col-sm-offset-3 " id="carousel-bounding-box">
                                     <div class="carousel slide" id="myCarousel">
                                         <!-- Carousel items -->
                                         <div class="carousel-inner">
                                             <div class="active item" data-slide-number="0">
-                                            <img src="img/photo_1.1.jpg"></div>
+                                            <img src="img/Fon_1.jpg"></div>
 
                                             <div class="item" data-slide-number="1">
-                                            <img src="img/photo_2.jpg"></div>
+                                            <img src="img/Fon_2.jpg"></div>
 
                                             <div class="item" data-slide-number="2">
-                                            <img src="img/photo_3.jpg"></div>
+                                            <img src="img/Fon_3.jpg"></div>
 
                                             <div class="item" data-slide-number="3">
-                                            <img src="img/photo_4.jpg"></div>
+                                            <img src="img/Fon_4.jpg"></div>
 
                                             <div class="item" data-slide-number="4">
-                                            <img src="img/photo_5.jpg"></div>
+                                            <img src="img/Fon_5.jpg"></div>
 
                                             <div class="item" data-slide-number="5">
-                                            <img src="img/photo_6.jpg"></div>
+                                            <img src="img/Fon_6.jpg"></div>
                                         </div><!-- Carousel nav -->
                                         <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
                                             <span class="glyphicon glyphicon-chevron-left"></span>                                       
                                         </a>
                                         <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-                                            <span class="glyphicon glyphicon-chevron-right"></span>                                       
+                                            <span><img src="img/strilka_white.png" alt=""></span>
+                                            <!-- <span><i class="fa fa-angle-right" aria-hidden="true"></i></span> -->
+                                            <!-- <span class="glyphicon glyphicon-chevron-right"></span>  -->                                
                                         </a>                                
                                         </div>
                                 </div>
@@ -309,27 +306,27 @@
                             <!-- Bottom switcher of slider -->
                             <ul class="hide-bullets">
                                 <li class="col-sm-2">
-                                    <a class="thumbnail" id="carousel-selector-0"><img src="img/photo_1.1.jpg"></a>
+                                    <a class="thumbnail" id="carousel-selector-0"><img src="img/Fon_1.jpg"></a>
                                 </li>
 
                                 <li class="col-sm-2">
-                                    <a class="thumbnail" id="carousel-selector-1"><img src="img/photo_2.jpg"></a>
+                                    <a class="thumbnail" id="carousel-selector-1"><img src="img/Fon_2.jpg"></a>
                                 </li>
 
                                 <li class="col-sm-2">
-                                    <a class="thumbnail" id="carousel-selector-2"><img src="img/photo_3.jpg"></a>
+                                    <a class="thumbnail" id="carousel-selector-2"><img src="img/Fon_3.jpg"></a>
                                 </li>
 
                                 <li class="col-sm-2">
-                                    <a class="thumbnail" id="carousel-selector-3"><img src="img/photo_4.jpg"></a>
+                                    <a class="thumbnail" id="carousel-selector-3"><img src="img/Fon_4.jpg"></a>
                                 </li>
 
                                 <li class="col-sm-2">
-                                    <a class="thumbnail" id="carousel-selector-4"><img src="img/photo_5.jpg"></a>
+                                    <a class="thumbnail" id="carousel-selector-4"><img src="img/Fon_5.jpg"></a>
                                 </li>
 
                                 <li class="col-sm-2">
-                                    <a class="thumbnail" id="carousel-selector-5"><img src="img/photo_6.jpg"></a>
+                                    <a class="thumbnail" id="carousel-selector-5"><img src="img/Fon_6.jpg"></a>
                                 </li>
                             </ul>                 
                     </div>
