--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
     </div>
 
 
-    <div id="kontakty">
+<!--     <div id="kontakty">
         <div class="container">
             <div class="row centered">
                 <div class="col-lg-2"></div>
@@ -356,7 +356,44 @@
                 </div>                
             </div>
         </div>
-    </div>
+    </div> -->
+    <section class="contact__section">
+      <div class="contact__info">
+        <h1 class="contact__headind">
+          КОНТАКТИ
+        </h1>
+        <p class="contact__description">
+          Організатором AliveCamp є спільнота "Благословення" Української Греко-Католицької Церкви, яка займається просвітницькою, духовною та соціальною працею з молоддю і дорослими у м.Львові та за його межами. Виручені кошти з AliveCamp будуть спрямовані на підтримку та реалізацію цієї діяльності.
+        </p>
+        <div class="contact__block-wrapper">
+          <div class="contact__block-phones">
+            <ul class="contact__list-phones">
+              <li class="kyivstar"> 
+                Київстар: 097 220 78 30 
+              </li>
+              <li class="vodafone">
+                Vodafone: 099 125 05 24
+              </li>
+              <li class="lifecell">
+                Lifecell: 063 066 02 93
+              </li>
+            </ul>
+          </div>
+          <div class="contact__block-social">
+            <ul class="contact__list-social">
+              <li class="vk">
+                <a href="#"><img src="img/glyphicons-social-67-vk.png"></a>
+                <a href="#"><img src="img/glyphicons-social-31-facebook.png"></a>
+                <a href="#"><img src="img/glyphicons-social-33-instagram.png"></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <p class="contact__email">
+          info@alivecamp.com.ua
+        </p>
+      </div>
+    </section>
 
     
     
