some fixes at mobile version

--- a/index.html
+++ b/index.html
@@ -353,46 +353,6 @@
                                         </a>
                                         </div>
                                 </div>
-
-                               <!--  <div class="col-sm-4" id="carousel-text"></div>
-
-                                <div id="slide-content" style="display: none;">
-                                    <div id="slide-content-0">
-                                        <h2>Slider One</h2>
-                                        <p>Lorem Ipsum Dolor</p>
-                                        <p class="sub-text">October 24 2012 - <a href="#">Read more</a></p>
-                                    </div>
-
-                                    <div id="slide-content-1">
-                                        <h2>Slider Two</h2>
-                                        <p>Lorem Ipsum Dolor</p>
-                                        <p class="sub-text">October 24 2012 - <a href="#">Read more</a></p>
-                                    </div>
-
-                                    <div id="slide-content-2">
-                                        <h2>Slider Three</h2>
-                                        <p>Lorem Ipsum Dolor</p>
-                                        <p class="sub-text">October 24 2012 - <a href="#">Read more</a></p>
-                                    </div>
-
-                                    <div id="slide-content-3">
-                                        <h2>Slider Four</h2>
-                                        <p>Lorem Ipsum Dolor</p>
-                                        <p class="sub-text">October 24 2012 - <a href="#">Read more</a></p>
-                                    </div>
-
-                                    <div id="slide-content-4">
-                                        <h2>Slider Five</h2>
-                                        <p>Lorem Ipsum Dolor</p>
-                                        <p class="sub-text">October 24 2012 - <a href="#">Read more</a></p>
-                                    </div>
-
-                                    <div id="slide-content-5">
-                                        <h2>Slider Six</h2>
-                                        <p>Lorem Ipsum Dolor</p>
-                                        <p class="sub-text">October 24 2012 - <a href="#">Read more</a></p>
-                                    </div>
-                                </div> -->
                             </div>
                         </div>
                     </div><!--/Slider-->
@@ -428,65 +388,56 @@
             </div>
     </div>
     </div>
-
-
-<!--     <div id="kontakty">
-        <div class="container">
-            <div class="row centered">
-                <div class="col-lg-2"></div>
-                <div class="col-lg-10">
-                    <h1>КОНТАКТИ</h1>
-                    <h3>Організатором AliveCamp є спільнота "Благословення"<br/>Української Греко-Католицької Церкви, яка займається<br/>просвітницькою, духовною та соціальною працею з<br/> молоддю і дорослими у м.Львові та за його<br/>межами. Виручені кошти з AliveCamp<br/>будуть спрямовані на підтримку та<br/> реалізацію цієї діяльності.</h3>
-                </div>
-            </div>
-            <div class="row centered">
-                <div class="col-lg-8"></div>
-                <div class="col-lg-4">
-                    <h2>097 220 78 30<br/>099 125 05 24<br/>063 913 47 23<br></h2>
-                    <a href=""><img src="img/glyphicons-social-31-facebook.png" alt=""><span class="social social-pinterest"></span></a>
-                    <a href=""><img src="img/glyphicons-social-33-instagram.png" alt=""></span></a>
-                    <a href=""><img src="img/glyphicons-social-67-vk.png" alt=""></span></a>
-                    <h4>info@alivecamp.com.ua</h4>
-                </div>
-            </div>
-        </div>
-    </div> -->
     <section class="contact__section">
-      <div class="contact__info">
-        <h1 class="contact__headind">
-          КОНТАКТИ
-        </h1>
-        <p class="contact__description">
-          Організатором AliveCamp є спільнота "Благословення" Української Греко-Католицької Церкви, яка займається просвітницькою, духовною та соціальною працею з молоддю і дорослими у м.Львові та за його межами. Виручені кошти з AliveCamp будуть спрямовані на підтримку та реалізацію цієї діяльності.
-        </p>
-        <div class="contact__block-wrapper">
-          <div class="contact__block-phones">
-            <ul class="contact__list-phones">
-              <li class="kyivstar"> 
-                Київстар: 097 220 78 30 
-              </li>
-              <li class="vodafone">
-                Vodafone: 099 125 05 24
-              </li>
-              <li class="lifecell">
-                Lifecell: 063 066 02 93
-              </li>
-            </ul>
-          </div>
-          <div class="contact__block-social">
-            <ul class="contact__list-social">
-              <li class="vk">
-                <a href="#"><img src="img/glyphicons-social-67-vk.png"></a>
-                <a href="#"><img src="img/glyphicons-social-31-facebook.png"></a>
-                <a href="#"><img src="img/glyphicons-social-33-instagram.png"></a>
-              </li>
-            </ul>
-          </div>
+        <div class="row contact__headind centered">
+            <div class="col-md-10 col-md-offset-1">
+                <h2 class="contact__headind">
+                  КОНТАКТИ
+                </h2>
+            </div>        
         </div>
-        <p class="contact__email">
-          info@alivecamp.com.ua
-        </p>
-      </div>
+        <div class="row contact_description">
+            <div class="col-md-10 col-md-offset-1 text-center">
+                <p class="contact__description">
+                  Організатором AliveCamp є спільнота "Благословення" Української Греко-Католицької Церкви, яка займається просвітницькою, духовною та соціальною працею з молоддю і дорослими у м.Львові та за його межами. Виручені кошти з AliveCamp будуть спрямовані на підтримку та реалізацію цієї діяльності.
+                </p>
+            </div>
+        </div> 
+        <div class="row contact__info-block">
+            <div class="col-md-2 col-sm-1"></div>
+            <div class="col-md-4 col-sm-5 col-xs-12">
+                <ul class="contact__list-phones">
+                  <li class="kyivstar text-right"> 
+                    Київстар: 097 220 78 30 
+                  </li>
+                  <li class="vodafone text-right">
+                    Vodafone: 099 125 05 24
+                  </li>
+                  <li class="lifecell text-right">
+                    Lifecell: 063 066 02 93
+                  </li>
+                </ul>
+            </div>
+            <div class="col-md-4 col-sm-5 col-xs-12">
+                <ul class="contact__list-social">
+                  <li class="vk">
+                    <a href="#"><img src="img/vk-social-network-logo.png"></a>
+                  </li>
+                  <li class="facebook">
+                    <a href="#"><img src="img/facebook-logo-button.png"></a>
+                  </li>
+                  <li class="instagram">
+                    <a href="#"><img src="img/icon-1562139_960_720.png"></a>
+                  </li>
+                </ul>
+            </div>
+            <div class="col-md-2 col-sm-1"></div>
+        </div>
+        <div class="row contact__email centered">
+            <p class="contact__email">
+              info@alivecamp.com.ua
+            </p>
+        </div>  
     </section>
 
 
@@ -496,3 +447,5 @@
     <script src="js/slider.js"></script>
 </body>
 </html>
+
+
