--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
         </div> 
         <div class="row contact__info-block">
             <div class="col-md-2 col-sm-1"></div>
-            <div class="col-md-4 col-sm-5 col-xs-12">
+            <div class="col-md-4 col-sm-5 col-xs-10 contact__phones">
                 <ul class="contact__list-phones">
                   <li class="kyivstar text-right"> 
                     Київстар: 097 220 78 30 
@@ -418,7 +418,7 @@
                   </li>
                 </ul>
             </div>
-            <div class="col-md-4 col-sm-5 col-xs-12">
+            <div class="col-md-4 col-sm-5 col-xs-10 contact__social">
                 <ul class="contact__list-social">
                   <li class="vk">
                     <a href="#"><img src="img/vk-social-network-logo.png"></a>
